using Locale instead of string comparation