@@ -10,7 +10,6 @@ package net.sourceforge.fenixedu.presentationTier.Action.publico;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -30,7 +29,6 @@ import net.sourceforge.fenixedu.presentationTier.Action.exceptions.NonExistingAc
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.ServiceUtils;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
 
-import org.apache.struts.Globals;
 import org.apache.struts.action.ActionForm;
 import org.apache.struts.action.ActionForward;
 import org.apache.struts.action.ActionMapping;
@@ -47,45 +45,38 @@ public class ViewExamsMapDANew extends FenixContextDispatchAction {
         if (session != null) {
 			String[] allCurricularYears = { "1", "2", "3", "4", "5" };
 			
-		   List curricularYears = new ArrayList(allCurricularYears.length);
-		   for (int i = 0; i < allCurricularYears.length; i++)
-			   curricularYears.add(new Integer(allCurricularYears[i]));
+		   List<Integer> curricularYears = new ArrayList<Integer>(allCurricularYears.length);
+		   for (int i = 0; i < allCurricularYears.length; i++) {
+               curricularYears.add(Integer.valueOf(allCurricularYears[i]));    
+           }
 
-			   request.setAttribute("curricularYearList", curricularYears);
+		   request.setAttribute("curricularYearList", curricularYears);
         	
-        	
-			
-            IUserView userView = (IUserView) request.getSession().getAttribute(SessionConstants.U_VIEW);
-            //Integer executionPeriodOId = getFromRequest("executionPeriodOID",
-            // request);
-            Integer degreeId = getFromRequest("degreeID", request);
-            request.setAttribute("degreeID", degreeId);
+		   IUserView userView = (IUserView) request.getSession().getAttribute(SessionConstants.U_VIEW);
+		   Integer degreeId = getFromRequest("degreeID", request);
+		   request.setAttribute("degreeID", degreeId);
 
-            Integer executionDegreeId = getFromRequest("executionDegreeID", request);
-            request.setAttribute("executionDegreeID", executionDegreeId);
+		   Integer executionDegreeId = getFromRequest("executionDegreeID", request);
+		   request.setAttribute("executionDegreeID", executionDegreeId);
 
-            Integer index = getFromRequest("index", request);
-            request.setAttribute("index", index);
-			Integer indice = getFromRequest("indice", request);
-			request.setAttribute("indice", indice);
+		   Integer index = getFromRequest("index", request);
+		   request.setAttribute("index", index);
+		   Integer indice = getFromRequest("indice", request);
+		   request.setAttribute("indice", indice);
 
-			List lista = (List)request.getAttribute ("lista");
-  			request.setAttribute("lista",lista);
-            Integer degreeCurricularPlanId = getFromRequest("degreeCurricularPlanID", request);
-            request.setAttribute("degreeCurricularPlanID", degreeCurricularPlanId);
+		   List lista = (List)request.getAttribute ("lista");
+		   request.setAttribute("lista",lista);
+		   Integer degreeCurricularPlanId = getFromRequest("degreeCurricularPlanID", request);
+		   request.setAttribute("degreeCurricularPlanID", degreeCurricularPlanId);
 
-            Boolean inEnglish = getFromRequestBoolean("inEnglish", request);
+		   Boolean inEnglish = getFromRequestBoolean("inEnglish", request);
             request.setAttribute("inEnglish", inEnglish);
-  //          List curricularYears = (List) request.getAttribute("curricularYearList");
 
-            InfoExecutionPeriod infoExecutionPeriod = (InfoExecutionPeriod) request
-                    .getAttribute(SessionConstants.EXECUTION_PERIOD);
+            InfoExecutionPeriod infoExecutionPeriod = (InfoExecutionPeriod) request.getAttribute(SessionConstants.EXECUTION_PERIOD);
             request.setAttribute(SessionConstants.EXECUTION_PERIOD, infoExecutionPeriod);
-            request.setAttribute(SessionConstants.EXECUTION_PERIOD_OID, infoExecutionPeriod
-                    .getIdInternal().toString());
+            request.setAttribute(SessionConstants.EXECUTION_PERIOD_OID, infoExecutionPeriod.getIdInternal().toString());
 
-            InfoExecutionDegree infoExecutionDegree = (InfoExecutionDegree) request
-                    .getAttribute(SessionConstants.EXECUTION_DEGREE);
+            InfoExecutionDegree infoExecutionDegree = (InfoExecutionDegree) request.getAttribute(SessionConstants.EXECUTION_DEGREE);
 
             if (infoExecutionDegree== null) 
 				request.setAttribute("infoDegreeCurricularPlan","");
@@ -93,7 +84,6 @@ public class ViewExamsMapDANew extends FenixContextDispatchAction {
             	request.setAttribute("infoDegreeCurricularPlan", infoExecutionDegree
                    	 .getInfoDegreeCurricularPlan());
 			}
-            
             
             request.setAttribute(SessionConstants.EXECUTION_DEGREE, infoExecutionDegree);
          
@@ -106,10 +96,9 @@ public class ViewExamsMapDANew extends FenixContextDispatchAction {
             } catch (NonExistingServiceException e) {
                 throw new NonExistingActionException(e);
             }
-            String language = getLocaleLanguageFromRequest(request);
             InfoDegreeCurricularPlan infoDegreeCurricularPlan = null;
             infoDegreeCurricularPlan = infoExamsMap.getInfoExecutionDegree().getInfoDegreeCurricularPlan();
-            infoDegreeCurricularPlan.prepareEnglishPresentation(language);
+            infoDegreeCurricularPlan.prepareEnglishPresentation(getLocale(request));
             infoExamsMap.getInfoExecutionDegree().setInfoDegreeCurricularPlan(infoDegreeCurricularPlan);
            // infoExecutionDegree.setInfoDegreeCurricularPlan(infoDegreeCurricularPlan);
             
@@ -152,12 +141,6 @@ public class ViewExamsMapDANew extends FenixContextDispatchAction {
             }
         }
         return parameterBoolean;
-    }
-    private String getLocaleLanguageFromRequest(HttpServletRequest request) {
-
-        Locale locale = (Locale) request.getSession(false).getAttribute(Globals.LOCALE_KEY);
-        return  locale.getLanguage();
-
     }
 
 }
